--- a/lecturenotesclass13.Rmd
+++ b/lecturenotesclass13.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Simulation-based inference - confidence intervals"
-author: ""
+author: "Connor Murphy"
 date: "March 3, 2021"
 output: html_document
 editor_options: 
@@ -32,7 +32,7 @@ library(infer)
 
 ## Big picture
 
-```{r echo=FALSE, fig.width=12}
+```{r echo=FALSE, fig.width=12, eval=FALSE}
 set.seed(234)
 pop <- tibble(
   x = rnorm(1000, sd = 10),
@@ -147,6 +147,9 @@ were to take another random sample of 50 students, how many would you expect
 to be left handed? Would you be surprised if only 3 of them were left handed? 
 Would you be surprised if 40 of them were left handed?
 
+I probably would not be surprised if 3 were left handed, but I would be quite
+surprised if 40 were.
+
 ## Quantifying the variability of a sample statistic
 
 We can quantify the variability of sample statistics using
@@ -189,7 +192,7 @@ Consider 20 1-bedroom apartments that were randomly selected on
 Craigslist Manhattan from apartments listed as "by owner".
 
 ```{r data_manhattan}
-manhattan <- read_csv("~/manhattan.csv")
+manhattan <- read_csv("~/R/STA199/lc/lc13/manhattan.csv")
 ```
 
 Consider 3-10 day survival of mice randomized to various
@@ -250,10 +253,10 @@ Create a 95% bootstrap confidence interval for the population *mean* price of
 
 First, identify the following:
 
-- Population: 
-- Parameter of interest:
-- Sample:
-- Sample size:
+- Population: 1-bedroom apartments in Manhattan
+- Parameter of interest: mean price
+- Sample: 1-bedroom apartments
+- Sample size: 20
 
 To create our confidence interval, we'll follow the four-step bootstrap
 scheme outlined in the slides using functions from `infer`.
@@ -330,7 +333,8 @@ get_ci(boot_means, level = 0.95)
 
 What does this mean?
 
-**Interpretation**:
+**Interpretation**: This means that, if many samples were taken, 95% percent of
+them would contain the true mean value.
 
 #### Practice
 
