--- a/lecturenotesclass13.Rmd
+++ b/lecturenotesclass13.Rmd
@@ -343,7 +343,11 @@ population *median* price of 1-bedroom apartments in Manhattan. Do this in a
 single code chunk with a single pipeline. Provide an interpretation of your result.
 
 ```{r practice_1}
-
+manhattan %>%
+  specify(response = rent) %>%
+  generate(reps=10000, type="bootstrap") %>%
+  calculate(stat="median") %>%
+  get_ci(level=0.95)
 ```
 
 ### A confidence interval for the population proportion - $p$
@@ -352,10 +356,10 @@ Consider the mice radiation dataset. Suppose we want to compute a 95% confidence
 
 First, identify the following:
 
-- Population: 
-- Parameter of interest:
-- Sample:
-- Sample size:
+- Population: mice that are not on treatment
+- Parameter of interest: proportion that died
+- Sample: mice not on treatment
+- Sample size: 261
 
 ```{r boot_mice}
 boot_prop <- mice %>% 
@@ -373,7 +377,8 @@ ci_mice_died
 
 What does this mean?
 
-**Interpretation**:
+**Interpretation**: This means we are 95% confident that the true mean lies
+within the given interval.
 
 ```{r visualize_ci_mice}
 visualise(boot_prop) +
@@ -385,21 +390,32 @@ visualise(boot_prop) +
 Consider the mice radiation results. Suppose we want to compute a 90% confidence interval for the proportion of mice that lived while on the treatment, regardless of the dose.
 
 ```{r practice_2_bootstrap}
-
+boot_prop_2 <- mice %>%
+  filter(treat == 1) %>%
+  mutate(died = if_else(died == 0, "no", "yes")) %>% 
+  specify(response = died, success = "no") %>% 
+  generate(reps = 10000, type = "bootstrap") %>% 
+  calculate(stat = "prop")
 ```
 
 ```{r practice_2_ci}
-
+ci_mice_lived <- get_ci(boot_prop_2, level = 0.90)
+ci_mice_lived
 ```
 
 Visualizing our Resuts:
 
 ```{r practice_2_visualize}
-
+visualize(boot_prop_2) +
+  shade_ci(ci_mice_lived)
 ```
 
 
 Give an interpretation of your result.
+
+We can be 95% percent confident that the true proportion of mice that lived
+while on the treatment will fall within the interval described by 
+`ci_mice_lived`.
 
 
 # References
